<resources>
    <string name="app_name">Project02_</string>
    <string name="welcome_to_store">Welcome to (Store)</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_id">User ID:</string>
    <string name="password">Password:</string>
    <string name="loginButton">Login!</string>
    <string name="username">Username</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="admin">Admin</string>
    <string name="logout">logout</string>
    <string name="passwordStatic" />
    <string name="create" />
    <string name="create_account">Create Account</string>
    <string name="enter_a_username" />
    <string name="enter_a_password" />
    <string name="usernameStatic">Username:</string>
    <string name="passwordStati">Password</string>
    <string name="createButton">Create</string>
    <string name="enter_a_username1">Enter a username</string>
    <string name="password3">Password:</string>
    <string name="delete">Delete</string>
    <string name="list_of_products">LIST OF PRODUCTS</string>
</resources>