<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/singInTextView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />


    <EditText
        android:id="@+id/editTextSignInUserID"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:hint="@string/enter_user_id"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toBottomOf="@id/singInTextView"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/loginPagePasswordEditText"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/signInPagePasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInUserID" />

    <TextView
        android:id="@+id/signInPageLoginPageTextViewUserId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="392dp"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/user_id"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextSignInUserID"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInPagePasswordTextView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPageLoginPageTextViewUserId" />

    <Button
        android:id="@+id/loginButtonForSignInPageW"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#96B3EA"
        android:text="@string/loginButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPagePasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>