<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/Title_SignUp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextViewUsername"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_rectangles"
        android:hint="@string/enter_a_username1"
        android:imeOptions="actionDone"
        android:paddingLeft="7dp"
        android:singleLine="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Static_TextViewUserId" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rectangles"
        android:hint="Enter a password"
        android:imeOptions="actionDone"
        android:paddingLeft="7dp"
        android:singleLine="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Static_TextViewPassword" />

    <TextView
        android:id="@id/Static_TextViewUserId"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="256dp"
        android:paddingLeft="3dp"
        android:paddingTop="10dp"
        android:text="@string/usernameStatic"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/Static_TextViewPassword"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="376dp"
        android:paddingLeft="3dp"
        android:paddingTop="10dp"
        android:text="@string/password3"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#5EB99BED"
        android:text="@string/createButton"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>